More reliable way to prevent ticker truncation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -155,6 +155,7 @@ h1,h2,h3,h4,h5 {
 .bus-route--ticker { /* the outer div with the black border */
 clear: both;
 background: #fff;
+min-width: 36000px;
 height: 50px;
 margin: 0;
 padding: 0;
